# nrfdfu_ng

./: .gitignore  BUILD  Makefile.am  README.md  ble.c  ble.h  configure.ac  crc32.c  dfu.c  dfu.h  hexdump.c  manifest.c  manifest.h  nrfdfu.c  project.h  prototypes.h  util.c  zip.c
bluez/: att.c  att.h  crypto.c  gatt-client.c  gatt-db.c  gatt-helpers.c  io-mainloop.c  mainloop.c  mainloop.h  queue.c  util.c  uuid.c
